# FastAPI

app/: pyproject.toml  test.db
app/app/: main.py
app/uploads/: fileoutpart0.xlsx
